[project]
name = "latent-flow"
version = "0.1.0"
description = "Generate images using latent flow matching model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.2.1",
    "diffusers>=0.32.1",
    "kaggle>=1.6.17",
    "matplotlib>=3.10.0",
    "pot>=0.9.5",
    "torch>=2.5.1",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "triton>=3.1.0",
    "wandb>=0.19.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "lxml>=5.3.0",
]
